--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Lucas Cavalheiro",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "nodemon": "^2.0.15"
   }
